Added new view to display all the levels

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
@@ -11,19 +12,6 @@
     android:layout_gravity="center"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
-
-
-    <!--    <androidx.appcompat.widget.Toolbar-->
-    <!--        android:id="@+id/toolbar"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="?attr/actionBarSize"-->
-    <!--        android:layout_alignParentTop="true"-->
-    <!--        android:layout_marginTop="0dp"-->
-    <!--        android:background="#3F51F8"-->
-    <!--        android:fitsSystemWindows="true"-->
-    <!--        app:title="Checkmate Challenge"-->
-    <!--        app:titleTextColor="@android:color/white" />-->
-
 
     <com.grandmasters.checkmatechallenge.ChessView
         android:id="@+id/chess_view"
@@ -60,7 +48,7 @@
             android:text="Hint"
             android:textAlignment="center"
             android:textAllCaps="false"
-            android:textColor="#000000" />
+            android:textColor="#000000"/>
 
         <Button
             android:id="@+id/resetButton"
@@ -92,40 +80,17 @@
             android:textAllCaps="false"
             android:textColor="#000000" />
 
-
     </LinearLayout>
+
+    <Button
+        android:id="@+id/levels_btn"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="35dp"
+        android:background="@drawable/matrix"
+        android:text="" />
 
 </RelativeLayout>
 
 
-    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:id="@+id/main"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent"-->
-<!--    tools:context=".MainActivity">-->
-
-<!--    &lt;!&ndash; Toolbar &ndash;&gt;-->
-<!--    <androidx.appcompat.widget.Toolbar-->
-<!--        android:id="@+id/toolbar"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="?attr/actionBarSize"-->
-<!--        android:background="?attr/colorPrimary"-->
-<!--        app:title="Checkmate Challenge"-->
-<!--        app:titleTextColor="@android:color/white"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--    &lt;!&ndash; TextView &ndash;&gt;-->
-<!--    <TextView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:scaleX="2"-->
-<!--        android:scaleY="2"-->
-<!--        android:text="Hello World!"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/toolbar" />-->
-
-<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
