--- a/app/src/main/res/layout/activity_levels.xml
+++ b/app/src/main/res/layout/activity_levels.xml
@@ -32,11 +32,22 @@
         android:id="@+id/textView"
         android:layout_width="200dp"
         android:layout_height="70dp"
+        android:layout_centerHorizontal="true"
         android:paddingTop="10dp"
         android:text="Levels"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="34sp" />
+
+    <Button
+        android:id="@+id/back_arrow"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="40dp"
+        android:layout_toStartOf="@+id/textView"
+        android:background="@drawable/back_arrow"
+        android:text="" />
 
 
 </RelativeLayout>
